Update the post editing form with the new functionality and fix image overflow

--- a/src/styles/PostingForm.module.css
+++ b/src/styles/PostingForm.module.css
@@ -5,7 +5,7 @@
 .Image {
   max-width: 100%;
   max-height: 10%;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 
 .Checkbox {
